--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
         <div class="subheading mb-5">159, Rana Pratap,BITS Pilani,Pilani, Jhunjhunu-333031 
           <a href="mailto:f2016938@pilani.bits-pilani.ac.in">f2016938@pilani.bits-pilani.ac.in</a>
         </div>
-        <p class="lead mb-5">I am a <b>Junior undergraduate student at BITS Pilani, Pilani Campus</b>. I am pursuing a double major in <b>Computer Science and Biological Sciences</b>. I am interested in Competitive Coding, Web Development and Deep Learning and its interdisciplinary applications.  I am an <b>programmer</b> by profession, <b>amateur writer</b> and a full-time foodie. Welcome to my Website!</p>
+        <p class="lead mb-5">I am a <b>Junior undergraduate student at BITS Pilani, Pilani Campus</b>. I am pursuing a double major in <b>Computer Science and Biological Sciences</b>. I am interested in Competitive Coding, Web Development and Deep Learning and its interdisciplinary applications, particularly in the field of Biology. I go by the username <a href="https://www.stopstalk.com/user/profile/sir69">@sir69</a> on most competitive programming platforms.  I am an <b>programmer</b> by profession, <b>amateur writer</b> and a full-time foodie. Welcome to my Website!</p>
  <div class="subheading mb-5">
             <a href="https://github.com/ighosh98/ighosh98.github.io/blob/master/Trimmed_Resume.pdf">Download Resume</a></div>
       
@@ -183,7 +183,7 @@
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
-            <h3 class="mb-0">Birla Institute of Technology and Science, PIlani</h3>
+            <h3 class="mb-0">Birla Institute of Technology and Science, Pilani</h3>
             <div class="subheading mb-3">Bachelor of Science</div>
             <div>B.E.(Hons.) Computer Science</div>
             <div>M.Sc.(Hons.) Biological Sciences</div>
@@ -280,13 +280,13 @@
               Machine Learning</li>
             <li>
               <i class="fa-li fa fa-check"></i>
-              Natural Language Processing and Recommender Systems</li>
+              Computer Vision</li>
             <li>
               <i class="fa-li fa fa-check"></i>
-              Data Analysis</li>
+              Data Analysis and Visualization</li>
             <li>
               <i class="fa-li fa fa-check"></i>
-              Data Visualisation</li>
+              Competitive Programming</li>
           </ul>
         </div>
     </section>
