--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <meta name="author" content="">
 
     <title>Indraneel Ghosh</title>
-    <link rel="icon" href="profile.jpg" sizes="16x16 32x32" type="image/png">
+    <link rel="icon" href="profile.jpg" sizes="16x16 32x32" type="image/jpg">
 
     <!-- Bootstrap core CSS -->
      <script src="https://cdnjs.cloudflare.com/ajax/libs/waypoints/2.0.5/waypoints.min.js"></script>
