Dual degree added

--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
             <h3 class="mb-0">Birla Institute of Technology and Science, Pilani</h3>
-            <div class="subheading mb-3">Bachelor of Science</div>
+            <div class="subheading mb-3">Integrated Dual Degree(B.E(Hons) and M.Sc(Hons.))</div>
             <div>B.E.(Hons.) Computer Science</div>
             <div>M.Sc.(Hons.) Biological Sciences</div>
             <p>GPA: 8.25</p>
