--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between">
           <div class="resume-content">
             <h3 class="mb-0">PACE Junior Science College,Nerul</h3>
-            <div class="subheading mb-3">PCM(Physics, Chemistry,Mathematics)</div>
+            <div class="subheading mb-3">PCM(Physics, Chemistry,Mathematics) with Electrical Maintenance</div>
              </div>
           <div class="resume-date text-md-right">
             <span class="text-primary">August 2014 - May 2016</span>
