--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
         
       <h3 class="mb-0">Biological Sciences </h3>
            <ul class="list-inline">
-                  <button class = "button"><b>Introdutction to Bioinformatics</b></button> <button class = "button"><b>Biophysics</b></button> <button class = "button"><b>Cell Biology</b></button>  <button class = "button"><b>Genetics</b></button> <button class = "button"><b>Recombinant DNA Technology</b></button>
+                  <button class = "button"><b>Introduction to Bioinformatics</b></button> <button class = "button"><b>Biophysics</b></button> <button class = "button"><b>Cell Biology</b></button>  <button class = "button"><b>Genetics</b></button> <button class = "button"><b>Recombinant DNA Technology</b></button>
           </ul>
         
 
