--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between">
           <div class="resume-content">
             <h3 class="mb-0">PACE Junior Science College,Nerul</h3>
-            <div class="subheading mb-3">PCM(Physics, Chemistry,Mathematics)</div>
+            <div class="subheading mb-3">PCM(Physics, Chemistry,Mathematics) with Electrical Maintenance</div>
              </div>
           <div class="resume-date text-md-right">
             <span class="text-primary">August 2014 - May 2016</span>
@@ -226,7 +226,7 @@
         
       <h3 class="mb-0">Biological Sciences </h3>
            <ul class="list-inline">
-                  <button class = "button"><b>Introdutction to Bioinformatics</b></button> <button class = "button"><b>Biophysics</b></button> <button class = "button"><b>Cell Biology</b></button>  <button class = "button"><b>Genetics</b></button> <button class = "button"><b>Recombinant DNA Technology</b></button>
+                  <button class = "button"><b>Introduction to Bioinformatics</b></button> <button class = "button"><b>Biophysics</b></button> <button class = "button"><b>Cell Biology</b></button>  <button class = "button"><b>Genetics</b></button> <button class = "button"><b>Recombinant DNA Technology</b></button>
           </ul>
         
 
