--- a/index.html
+++ b/index.html
@@ -115,6 +115,11 @@
    					<strong>Github:</strong>
    					<span>https://www.github.com/ighosh98</span>
    				</li>
+                  <li>
+            <strong>Competitive Programming:</strong>
+            <span>https://www.stopstalk.com/user/profile/sir69</span>
+          </li>
+
    			</ul> <!-- /info-list -->
    		</div>
 
@@ -129,7 +134,7 @@
 				   	<strong>Python</strong>
 				   </li>
 				   <li>
-				   	<strong>SQL</strong>
+				   	<strong>Java</strong>
 				   </li>
 				   <li>
 				   	<strong>Deep Learning</strong>
