--- a/index.html
+++ b/index.html
@@ -178,7 +178,50 @@
 
    			<div class="timeline-wrap">
 
+          <div class="timeline-block">
 
+            <div class="timeline-ico">
+              <i class="fa fa-briefcase"></i>
+            </div>
+              <div class="timeline-header">
+              <h3>Incoming Software Devlopment Summer Intern</h3>
+              <p>May 2020 - Jul' 2020</p>
+            </div>
+
+            <div class="timeline-content">
+              <h4>Samsung Research Institute</h4>
+                  <p> Secured a summer internship opportunity.</p>
+                  <br>
+                  <br>
+              </div>
+          </div> <!-- /timeline-block -->     
+          <div class="timeline-block">
+            <div class="timeline-ico">
+              <i class="fa fa-briefcase"></i>
+            </div>
+            <div class="timeline-header">
+              <h3>Research and Development Intern</h3>
+              <p>June 2017 - July 2018</p>
+            </div>
+            <div class="timeline-content">
+              <h4>IMMT,Bhubaneshwar</h4>
+              <p>Website section built on .NET Platform. A database was built using Microsoft SQL Server.Web pages created were to be hosted on the institution's LAN to streamline the workflow.</p>
+                <p>
+                  Built an Android application for the same.(Using Cordova and Android Studio)
+                </p>
+            </div>
+
+    <div class="timeline-header">
+              <h3>Research Asssistant</h3>
+              <p>Nov' 2019 - Current</p>
+            </div>
+
+            <div class="timeline-content">
+              <h4>Networking Research Laboratory, BITS Pilani</h4>
+                  <p> Currently working under the guidance of Dr. Ashutosh Bhatia on the "Detection of Algorithmically generated Domain Names using Deep Learning in Botnets"</p>
+              </div>
+          </div> <!-- /timeline-block -->     
+ 
    				<div class="timeline-block">
 
 	   				<div class="timeline-ico">
@@ -194,7 +237,7 @@
 	   					<h4>CSIR-Central Electronics Engineering Research Institute</h4>
 				      		<p> Worked on building Deep Learning models for the problem:"Pain Detection using Facial Images"</p>
 				            <p>Built a preliminary CNN-RNN network using Pytorch.</p>
-				            <p>Currently working on building an autoencoder based implementation which can be used to identify manifold learning patterns.The autoencoder model is being adapted from  a model developed by School of Informatics and Computing, Indiana University</p>
+				            <p>Worked on building an autoencoder based implementation which can be used to identify manifold learning patterns.The autoencoder model is being adapted from  a model developed by School of Informatics and Computing, Indiana University</p>
        				</div>
 	   			</div> <!-- /timeline-block -->			
    				<div class="timeline-block">
@@ -243,7 +286,7 @@
             <div class="timeline-content">
             <h4>BITS Pilani, Pilani, India</h4>
               <p>CGPA: 8.25/10</p>
-              <p>Important Courses: Data Structures and Algorithms, Database Systems, Machine Learning, Probability and Statistics, Linear Algebra, Object Oriented Programming</p>
+              <p>Important Courses: Neural Networks and Fuzzy Logic, Data Structures and Algorithms, Database Systems, Machine Learning, Probability and Statistics, Linear Algebra, Object Oriented Programming</p>
               </div>
 
           </div> <!-- /timeline-block -->
@@ -282,7 +325,7 @@
 
             <div class="timeline-content">
               <h4>PACE Junior Science College, Nerul, Navi Mumbai, India</h4>
-              <p>PCM(Physics, Chemistry and Maths) with Elecrtrical Maintenance</p>
+              <p>PCM(Physics, Chemistry and Maths) with Electrical Maintenance</p>
             </div>
 
           </div> <!-- /timeline-block -->
