--- a/index.html
+++ b/index.html
@@ -109,11 +109,11 @@
 
    				<li>
    					<strong>LinkedIn Profile:</strong>
-   					<span>https://in.linkedin.com/in/indraneel-ghosh-38866b133</span>
+   					<span><a href="https://in.linkedin.com/in/indraneel-ghosh-38866b133">https://in.linkedin.com/in/indraneel-ghosh-38866b133</a></span>
    				</li>
    	   			<li>
    					<strong>Github:</strong>
-   					<span>https://www.github.com/ighosh98</span>
+   					<span><a href="https://www.github.com/ighosh98">https://www.github.com/ighosh98</a></span>
    				</li>
 
    			</ul> <!-- /info-list -->
