--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
 
    	<div class="row button-section">
    		<div class="col-twelve">
-   			<a href="https://github.com/ighosh98/ighosh98.github.io/blob/master/Trimmed_Resume.pdf" title="Download Resume" class="button button-primary">Download Resume</a>
+   			<a href="https://drive.google.com/file/d/1B8SyCiuENJ8jmWQs7xMxxxIiRzSaPk5O/view?usp=sharing" title="Download Resume" class="button button-primary">Download Resume</a>
    		</div>   		
    	</div>
 
@@ -382,7 +382,7 @@
 
    			<h5>Email Me At</h5>
 
-   			<p><a href="mailto:f2016938@pilani.bits-pilani.ac.in">f2016938@pilani.bits-pilani.ac.in</a><br>	    
+   			<p style="color: white"><a style="color: white" href="mailto:f2016938@pilani.bits-pilani.ac.in">f2016938@pilani.bits-pilani.ac.in</a><br>	    
 			   </p>
 
    		</div>
