--- a/index.html
+++ b/index.html
@@ -199,18 +199,6 @@
             <div class="timeline-ico">
               <i class="fa fa-briefcase"></i>
             </div>
-            <div class="timeline-header">
-              <h3>Research and Development Intern</h3>
-              <p>June 2017 - July 2018</p>
-            </div>
-            <div class="timeline-content">
-              <h4>IMMT,Bhubaneshwar</h4>
-              <p>Website section built on .NET Platform. A database was built using Microsoft SQL Server.Web pages created were to be hosted on the institution's LAN to streamline the workflow.</p>
-                <p>
-                  Built an Android application for the same.(Using Cordova and Android Studio)
-                </p>
-            </div>
-
     <div class="timeline-header">
               <h3>Research Asssistant</h3>
               <p>Nov' 2019 - Current</p>
@@ -219,6 +207,20 @@
             <div class="timeline-content">
               <h4>Networking Research Laboratory, BITS Pilani</h4>
                   <p> Currently working under the guidance of Dr. Ashutosh Bhatia on the "Detection of Algorithmically generated Domain Names using Deep Learning in Botnets"</p>
+              </div>
+          </div> <!-- /timeline-block -->     
+           <div class="timeline-block">
+            <div class="timeline-ico">
+              <i class="fa fa-briefcase"></i>
+            </div>
+    <div class="timeline-header">
+              <h3>Part Time Research Consultant</h3>
+              <p>Mar' 2019 - Sept' 2019</p>
+            </div>
+
+            <div class="timeline-content">
+              <h4>WorldQuant LLC</h4>
+                  <p>Learnt the basics of financial modelling and applied my programming knowledge to build alphas for trading.</p>
               </div>
           </div> <!-- /timeline-block -->     
  
