--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 
    				<img src="images/profile.jpg" alt="Profile Picture">
 
-   		      <p class="lead mb-5">I am a <b>Junior undergraduate student at BITS Pilani, Pilani Campus</b>. I am pursuing a double major in <b>Computer Science and Biological Sciences</b>. I am interested in Competitive Coding, Web Development and Deep Learning and its interdisciplinary applications, particularly in the field of Biology.</p>
+   		      <p class="lead mb-5">I am a <b>Senior undergraduate student at BITS Pilani, Pilani Campus</b>. I am pursuing a double major in <b>Computer Science and Biological Sciences</b>. I am interested in Software Development and Deep Learning and its interdisciplinary applications, particularly in the fields of Data Privacy, Finance and Biology. I like participating in contests of all kinds [Hackathons, algorithmic, machine learning or case competitions, to name a few].</p>
    			</div>   			
 
    		</div>   		
@@ -133,10 +133,13 @@
 				   	<strong>Java</strong>
 				   </li>
 				   <li>
+				   	<strong>Scala</strong>
+				   </li>
+				   <li>
 				   	<strong>Deep Learning</strong>
 				   </li>
       				<li>
-				   	<strong>HTML,CSS & Javascript</strong>
+				   	<strong>Javascript</strong>
 				   </li>
 				</ul> <!-- /skill-bars -->		
    		</div>
@@ -177,6 +180,31 @@
    		<div class="col-twelve">
 
    			<div class="timeline-wrap">
+          <div class="timeline-block">
+
+            <div class="timeline-ico">
+              <i class="fa fa-briefcase"></i>
+            </div>
+              <div class="timeline-header">
+              <h3>Product Engineering Intern</h3>
+              <p> Jul'20 -Dec'20 (Fall Semester)</p>
+            </div>
+
+            <div class="timeline-content">
+              <h4>Trifacta Software LLC</h4>
+              <p>
+              	<ul>
+              		<li>
+              			Built integrations for Immuta and improved support for Azure and AWS Databricks for enterprise offerings. 
+              		</li>
+              		<li>
+              		    Improved the frontend functionality fo the <a href="https://www.trifacta.com/start-wrangling/"> SaaS</a> and Enterprise versions of product.
+					</li>
+              </p>
+                  <br>
+                  <br>
+              </div>
+          </div> <!-- /timeline-block -->     
 
           <div class="timeline-block">
 
@@ -184,13 +212,13 @@
               <i class="fa fa-briefcase"></i>
             </div>
               <div class="timeline-header">
-              <h3>Incoming Software Devlopment Summer Intern</h3>
+              <h3>Summer Research Intern</h3>
               <p>May 2020 - Jul' 2020</p>
             </div>
 
             <div class="timeline-content">
               <h4>Samsung Research Institute</h4>
-                  <p> Secured a summer internship opportunity.</p>
+                  <p> Built a deployable <b>light-weight(8MB) model</b>for <b>real-time Facial landmark detection} using <a href="https://arxiv.org/abs/1604.02878">MTCNN</a></b> </p>
                   <br>
                   <br>
               </div>
@@ -206,7 +234,7 @@
 
             <div class="timeline-content">
               <h4>Networking Research Laboratory, BITS Pilani</h4>
-                  <p> Currently working under the guidance of Dr. Ashutosh Bhatia on the "Detection of Algorithmically generated Domain Names using Deep Learning in Botnets"</p>
+                  <p>Paper submitted on the Detection of Algorithmically generated Domain Names using Deep Learning in Botnets</p>
               </div>
           </div> <!-- /timeline-block -->     
            <div class="timeline-block">
@@ -237,9 +265,14 @@
 
 	   				<div class="timeline-content">
 	   					<h4>CSIR-Central Electronics Engineering Research Institute</h4>
-				      		<p> Worked on building Deep Learning models for the problem:"Pain Detection using Facial Images"</p>
-				            <p>Built a preliminary CNN-RNN network using Pytorch.</p>
-				            <p>Worked on building an autoencoder based implementation which can be used to identify manifold learning patterns.The autoencoder model is being adapted from  a model developed by School of Informatics and Computing, Indiana University</p>
+	   					<ul>
+	   						<li>
+	   							Worked on building Deep Learning models for the problem:"Pain Detection using Facial Images"
+	   						</li>
+				            <li>
+				            	Built a preliminary CNN-RNN network using Pytorch.
+				            </li>
+						</ul>
        				</div>
 	   			</div> <!-- /timeline-block -->			
    				<div class="timeline-block">
@@ -252,10 +285,14 @@
 	   				</div>
 	   				<div class="timeline-content">
 	   					<h4>IMMT,Bhubaneshwar</h4>
-	   			    <p>Website section built on .NET Platform. A database was built using Microsoft SQL Server.Web pages created were to be hosted on the institution's LAN to streamline the workflow.</p>
-		            <p>
-		              Built an Android application for the same.(Using Cordova and Android Studio)
-		            </p>
+	   					<ul>
+			   			    <li>
+			   			    	Website section built on .NET Platform  to streamline the workflow of the organisation. An android application was also built for this purpose.
+			   				</li>
+				            <li>
+				            	Built an Android application for the same.(Using Cordova and Android Studio)
+				            </li>
+			            </ul>
 	   				</div>
 	   			</div> <!-- /timeline-block -->
    			</div> <!-- /timeline-wrap -->   			
@@ -288,7 +325,7 @@
             <div class="timeline-content">
             <h4>BITS Pilani, Pilani, India</h4>
               <p>CGPA: 8.25/10</p>
-              <p>Important Courses: Neural Networks and Fuzzy Logic, Data Structures and Algorithms, Database Systems, Machine Learning, Probability and Statistics, Linear Algebra, Object Oriented Programming</p>
+              <p>Important Courses: Neural Networks and Fuzzy Logic, Design and Analysis of Algorithms, Operating Systems, Data Structures and Algorithms, Database Systems, Machine Learning, Probability and Statistics, Linear Algebra, Multivariable Calculus, Object Oriented Programming, Principles of Economics</p>
               </div>
 
           </div> <!-- /timeline-block -->
@@ -308,8 +345,10 @@
 
             <div class="timeline-content">
               <h4>BITS Pilani, Pilani, India</h4>
-              <p>CGPA: 8.25/10</p>
-              <p>Important Courses: Introduction to Bioinformatics, Biophysics, Cell Biology, Genetics, Recombinant DNA Technology</p>
+              <p>CGPA: 8.49/10</p>
+              <p>
+              	Important Courses: Introduction to Bioinformatics, Biophysics, Cell Biology, Genetics, Recombinant DNA Technology, Introduction to Pharmaceutical Biotechnology
+              </p>
             </div>
 
           </div> <!-- /timeline-block -->
@@ -328,6 +367,7 @@
             <div class="timeline-content">
               <h4>PACE Junior Science College, Nerul, Navi Mumbai, India</h4>
               <p>PCM(Physics, Chemistry and Maths) with Electrical Maintenance</p>
+              <p>Percentile: 98.89</p>
             </div>
 
           </div> <!-- /timeline-block -->
