--- a/index.html
+++ b/index.html
@@ -367,6 +367,7 @@
             <div class="timeline-content">
               <h4>PACE Junior Science College, Nerul, Navi Mumbai, India</h4>
               <p>PCM(Physics, Chemistry and Maths) with Electrical Maintenance</p>
+              <p>Board Topper in Electrical Maintenance</p>
               <p>Percentile: 98.89</p>
             </div>
 
