--- a/index.html
+++ b/index.html
@@ -84,7 +84,9 @@
 
    				<img src="images/profile.jpg" alt="Profile Picture">
 
-   		      <p class="lead mb-5">I am a <b>Senior undergraduate student at BITS Pilani, Pilani Campus</b>. I am pursuing a double major in <b>Computer Science and Biological Sciences</b>. I am interested in Software Development and Deep Learning and its interdisciplinary applications, particularly in the fields of Data Privacy, Finance and Biology. I like participating in contests of all kinds [Hackathons, algorithmic, machine learning or case competitions, to name a few].</p>
+   		      <p class="lead mb-5">I am a <b>Computer Science graduate from BITS Pilani(Class of 2021)</b>. I specialise in building robust, scalable and highly optimized software products. Currently, I am working as a Software Engineer at Amazon. I work with the advertising and video streaming teams at the firm.
+				Further, I am interested in the applications of Deep Learning to solve customer and production grade problems. I have explored machine learning extensively as an undergraduate qand have presented a paper on the same during my undergraduate years at BITS Pilani.
+				I like solving abstract and challenging software development problems and get a kick out of participating in contests of all kinds [Hackathons, algorithmic, machine learning or case competitions, to name a few]. Further, I contribute to volunteer efforts to make the society a better place by developing scalable software solutions.</p>
    			</div>   			
 
    		</div>   		
@@ -132,22 +134,19 @@
 				   <li>
 				   	<strong>Java</strong>
 				   </li>
-				   <li>
-				   	<strong>Scala</strong>
-				   </li>
-				   <li>
-				   	<strong>Deep Learning</strong>
-				   </li>
-      				<li>
+				 	<li>
 				   	<strong>Javascript</strong>
 				   </li>
+				   <li>
+					<strong>Deep Learning</strong>
+				</li>
 				</ul> <!-- /skill-bars -->		
    		</div>
    	</div>
 
    	<div class="row button-section">
    		<div class="col-twelve">
-   			<a href="https://drive.google.com/file/d/1JrHAz_SW1296mJjN92Us7vWFFVnJEpSz/view?usp=sharing" title="Download Resume" class="button button-primary">Download Resume</a>
+   			<a href="https://drive.google.com/file/d/1dFsk8JZNH7d-TpjcUTdUf5rw0rmipYiD/view?usp=sharing" title="Download Resume" class="button button-primary">Download Resume</a>
    		</div>   		
    	</div>
 
@@ -161,7 +160,7 @@
 		<div class="row section-intro">
    		<div class="col-twelve">
 
-   			<h5>Resume</h5>
+   			<h5>Experience and Education</h5>
    			<h1></h1>
 
    			<p class="lead"></p>
@@ -180,7 +179,117 @@
    		<div class="col-twelve">
 
    			<div class="timeline-wrap">
-          <div class="timeline-block">
+				<div class="timeline-block">
+
+					<div class="timeline-ico">
+					  <i class="fa fa-briefcase"></i>
+					</div>
+					  <div class="timeline-header">
+					  <h3>Software Development Engineer</h3>
+					  <p> Jan'21 - Curr</p>
+					</div>
+		
+					<div class="timeline-content">
+					  <h4>Amazon</h4>
+					  <p>
+						  <ul>
+							  <li>
+								Worked on the redirection, streaming and browsing experience for miniTV and
+								IMDb TV mobile apps.
+								</li>
+								<li>
+									Developing a scalable video encoding solution to increase advertising revenue
+									for all Amazon Video Streaming platforms.
+								</li>
+								<li>
+									Built frameworks to optimize software development cycles that are used all
+									across Amazon’s Software Development teams.
+								</li>
+							</p>
+						  <br>
+						  <br>
+					  </div>
+				  </div>
+				   <!-- /timeline-block -->     
+				  <div class="timeline-block">
+
+					<div class="timeline-ico">
+					  <i class="fa fa-briefcase"></i>
+					</div>
+					  <div class="timeline-header">
+					  <h3>Open Source Developer</h3>
+					  <p> May'21 - Aug' 21</p>
+					</div>
+		
+					<div class="timeline-content">
+					  <h4>Google Summer of Code</h4>
+					  <p>
+						  <ul>
+							  <li>
+								Worked with National Resource for Network Biology, USA for developing a
+								gene enrichment application for the Cytoscape's core distribution. 
+								The software helps facilitate gene analysis which is crucial to solve challenging biological problems.
+							</li>
+							<li>
+								The project was one of the top 1292 open-source projects sponsored by Google in 2021.
+							</li>
+							</p>
+						  <br>
+						  <br>
+					  </div>
+				  </div> 
+			<!-- /timeline-block -->     
+			<div class="timeline-block">
+
+				<div class="timeline-ico">
+				  <i class="fa fa-briefcase"></i>
+				</div>
+				  <div class="timeline-header">
+				  <h3>Product Engineering Intern</h3>
+				  <p> Jul'20 -Dec'20 (Fall Semester)</p>
+				</div>
+	
+				<div class="timeline-content">
+				  <h4>Trifacta Software LLC</h4>
+				  <p>
+					  <ul>
+						  <li>
+							  Built integrations for Immuta and improved support for Azure and AWS Databricks for enterprise offerings. 
+						  </li>
+						  <li>
+							  Improved the frontend functionality fo the <a href="https://www.trifacta.com/start-wrangling/"> SaaS</a> and Enterprise versions of product.
+						</li>
+				  </p>
+					  <br>
+					  <br>
+				  </div>
+			  </div> <!-- /timeline-block -->     
+			  <div class="timeline-block">
+
+				<div class="timeline-ico">
+				  <i class="fa fa-briefcase"></i>
+				</div>
+				  <div class="timeline-header">
+				  <h3>Software Development Lead</h3>
+				  <p> Jul'20 -Dec'20 (Fall Semester)</p>
+				</div>
+	
+				<div class="timeline-content">
+				  <h4>Trifacta Software LLC</h4>
+				  <p>
+					  <ul>
+						  <li>
+							Responsible for developing scalable software applications for providing crucial information related to Covid-19 in India. 
+							The products developed raised over 2 million hits individually on a daily basis.						  
+						  </li>
+						</ul>
+				  </p>
+					  <br>
+					  <br>
+				  </div>
+			  </div> <!-- /timeline-block -->  	
+	
+			<div class="timeline-block">
 
             <div class="timeline-ico">
               <i class="fa fa-briefcase"></i>
@@ -251,30 +360,7 @@
                   <p>Learnt the basics of financial modelling and applied my programming knowledge to build alphas for trading.</p>
               </div>
           </div> <!-- /timeline-block -->     
- 
-   				<div class="timeline-block">
-
-	   				<div class="timeline-ico">
-	   					<i class="fa fa-briefcase"></i>
-	   				</div>
-
-		<div class="timeline-header">
-	   					<h3>Summer Research Intern</h3>
-	   					<p>May 2019 - Aug' 2019</p>
-	   				</div>
-
-	   				<div class="timeline-content">
-	   					<h4>CSIR-Central Electronics Engineering Research Institute</h4>
-	   					<ul>
-	   						<li>
-	   							Worked on building Deep Learning models for the problem:"Pain Detection using Facial Images"
-	   						</li>
-				            <li>
-				            	Built a preliminary CNN-RNN network using Pytorch.
-				            </li>
-						</ul>
-       				</div>
-	   			</div> <!-- /timeline-block -->			
+ 	
    				<div class="timeline-block">
 	   				<div class="timeline-ico">
 	   					<i class="fa fa-briefcase"></i>
@@ -319,13 +405,15 @@
 
             <div class="timeline-header">
               <h3>B.E. (Hons) Computer Science</h3>
-              <p>Sep 2016 - Present</p>
+              <p>Class of 2021</p>
             </div>
 
             <div class="timeline-content">
             <h4>BITS Pilani, Pilani, India</h4>
-              <p>CGPA: 8.25/10</p>
-              <p>Important Courses: Neural Networks and Fuzzy Logic, Design and Analysis of Algorithms, Operating Systems, Data Structures and Algorithms, Database Systems, Machine Learning, Probability and Statistics, Linear Algebra, Multivariable Calculus, Object Oriented Programming, Principles of Economics</p>
+              <p>CGPA: 8.48/10</p>
+              <p>Important Courses: Neural Networks and Fuzzy Logic, Design and Analysis of Algorithms, Operating Systems, Compiler Design, 
+				  Data Structures and Algorithms, Database Systems, Machine Learning, Probability and Statistics,
+				   Linear Algebra, Multivariable Calculus, Object Oriented Programming, Principles of Economics</p>
               </div>
 
           </div> <!-- /timeline-block -->
@@ -340,12 +428,12 @@
 
             <div class="timeline-header">
               <h3>M.Sc. (Hons) Biological Sciences</h3>
-              <p>Aug 2016 - Present</p>
+              <p>Class of 2021</p>
             </div>
 
             <div class="timeline-content">
               <h4>BITS Pilani, Pilani, India</h4>
-              <p>CGPA: 8.49/10</p>
+              <p>CGPA: 8.48/10</p>
               <p>
               	Important Courses: Introduction to Bioinformatics, Biophysics, Cell Biology, Genetics, Recombinant DNA Technology, Introduction to Pharmaceutical Biotechnology
               </p>
@@ -387,6 +475,7 @@
             <div class="timeline-content">
               <h4>Apeejay School, Nerul, Mumbai, India</h4>
               <p>Percentage: 96.4</p>
+			  <p>Awarded Academic Scholarship of INR 6000 for being among the top 10 candidates across all branches of the school in 9th and 10th grade.</p>
             </div>
 
           </div> <!-- /timeline-block -->
