Cleanup index.html

--- a/index.html
+++ b/index.html
@@ -238,32 +238,7 @@
 						  <br>
 					  </div>
 				  </div> 
-			<!-- /timeline-block -->     
-			<div class="timeline-block">
-
-				<div class="timeline-ico">
-				  <i class="fa fa-briefcase"></i>
-				</div>
-				  <div class="timeline-header">
-				  <h3>Product Engineering Intern</h3>
-				  <p> Jul'20 -Dec'20 (Fall Semester)</p>
-				</div>
-	
-				<div class="timeline-content">
-				  <h4>Trifacta Software LLC</h4>
-				  <p>
-					  <ul>
-						  <li>
-							  Built integrations for Immuta and improved support for Azure and AWS Databricks for enterprise offerings. 
-						  </li>
-						  <li>
-							  Improved the frontend functionality fo the <a href="https://www.trifacta.com/start-wrangling/"> SaaS</a> and Enterprise versions of product.
-						</li>
-				  </p>
-					  <br>
-					  <br>
-				  </div>
-			  </div> <!-- /timeline-block -->     
+			<!-- /timeline-block -->      
 			  <div class="timeline-block">
 
 				<div class="timeline-ico">
@@ -275,7 +250,7 @@
 				</div>
 	
 				<div class="timeline-content">
-				  <h4>Trifacta Software LLC</h4>
+				  <h4>PathCheck Foundation</h4>
 				  <p>
 					  <ul>
 						  <li>
