Fix messages on UI

--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
 				</div>
 				  <div class="timeline-header">
 				  <h3>Software Development Lead</h3>
-				  <p> Apr'21 - Jul'21 (Fall Semester)</p>
+				  <p> Apr'21 - Jul'21 </p>
 				</div>
 	
 				<div class="timeline-content">
@@ -271,7 +271,7 @@
             </div>
               <div class="timeline-header">
               <h3>Product Engineering Intern</h3>
-              <p> Jul'20 -Dec'20 (Fall Semester)</p>
+              <p> Jul'20 -Dec'20 </p>
             </div>
 
             <div class="timeline-content">
